2015-05-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support travis

2015-05-12  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a corner case to avoid crash

2015-04-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update codes

2014-12-21  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve error messages

2014-05-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add sanity check codes and demo codes

2014-05-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add more checks for VCF/BCF index files

2014-04-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix conditional macros (WIN32) for comply R extentsion requirement

2014-04-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix address sanitizer warnings

2014-04-17  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add function to extract covariance by paris

2014-04-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Enclose citation information

2014-04-14  zhanxw  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability when read tabix file

2014-04-13  zhanxw  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix an initialization problem to pass UBSAN check
	* Support compilation in Windows

2014-04-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add support for Solaris system (x86 Sun Studio 12.3)

2014-04-12  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support more annotation types

2014-04-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support basic annotation

2014-03-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change by default not creating tabix index

2014-01-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Rename tabix() to tabix.read()
	* Add tabix.createIndex()

2014-01-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add function to export summary statistics
