@@ -2,8 +2,8 @@ Package: seqminer
 Type: Package
 Title: Efficiently Read Sequence Data (VCF Format, BCF Format and METAL
         Format) into R
-Version: 3.9
-Date: 2015-05-18
+Version: 4.2
+Date: 2015-06-07
 Author: Xiaowei Zhan <zhanxw@gmail.com> and Dajiang Liu
     <dajiang.liu@gmail.com>, with contributions from Heng Li
     <lh3@live.co.uk> (Heng Li wrote tabix and with MIT license
@@ -16,9 +16,9 @@ Copyright: We have used the following software and made minimal
         printf, fprintf ; also changed its un-safe pointer arithmetics.
 License: GPL | file LICENSE
 URL: http://seqminer.genomic.codes
-Packaged: 2015-05-19 14:21:34 UTC; zhanxw
+Packaged: 2015-06-07 06:41:49 UTC; zhanxw
 Repository: CRAN
-Date/Publication: 2015-05-21 11:04:22
+Date/Publication: 2015-06-10 11:28:29
 Depends: stringr
 Suggests: testthat, SKAT
 SystemRequirements: C++11, zlib headers and libraries, optionally also
