@@ -1,3 +1,15 @@
+2015-06-07  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>
+
+	* Not suport Solaris 10 due to difficulties in setting up build env.
+
+2015-06-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Support load summary statistics for binary trait
+
+2015-05-19  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Add timeout = 3 seconds when checking new version
+
 2015-05-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Support travis
